Factorial,Sum Of Digits,Reverse Number,Number Palindrome,Armstrong Number

--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -52,8 +52,29 @@
             <input type="radio" id="Programs" name="P1" value="StringCopy">
             <label for="Programs">String Copy</label>
         </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="Factorial">
+            <label for="Programs">Factorial</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="SumOfDigits">
+            <label for="Programs">Sum Of Digits</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="ReverseNumber">
+            <label for="Programs">Reverse Number</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="Palindrome">
+            <label for="Programs">Number Palindrome</label>
+        </div>
+        <div>
+            <input type="radio" id="Programs" name="P1" value="ArmstrongNumber">
+            <label for="Programs">Armstrong Number</label>
+        </div>
         <br />
         <input type="submit" name="Process" value="Process" />
+
     </fieldset>
 </form>
  
