--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -3,78 +3,84 @@
     ViewBag.Title = "Programs";
 }
 
-<form>
-    <fieldset>
-        <label>Input1:</label>
-        <input type="text" name="Input1" />
-        <br />
-        <label>Input2:</label>
-        <input type="text" name="Input2" />
-        <br />
-        <label>Answer</label>
-        <input type="text" value="@ViewBag.Ans" name="Answer" />
-        <br />
+    <form>
+       
+        <fieldset>
 
-        <div>
+            <label>Input1:</label>
+            <input type="text" name="Input1" />
+            <br />
+            <label>Input2:</label>
+            <input type="text" name="Input2" />
+            <br />
+            <label>Answer</label>
+            <input type="text" value="@ViewBag.Ans" name="Answer" />
+            <br />
 
-            <input type="radio" id="Programs" name="P1" value="StringReverse">
-            <label for="Programs">String Reverse</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="StringPalindrome">
-            <label for="Programs">String Palindrome</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="StringLength">
-            <label for="Programs">String Length without using Library Function</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="IndividualcharactersInString">
-            <label for="Programs">Seperate Individual characters from String</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="IndividualcharactersOfStringInReverseOrder">
-            <label for="Programs">Seperate Individual characters from String in Reverse Order</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="NumberOfWordsInString">
-            <label for="Programs">Number Of Words In String</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="CompareTwoStrings">
-            <label for="Programs">Compare Two Strings Without using Library Function</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="NumberOfAlaphabetsandVowels">
-            <label for="Programs">Count Number Of Alaphabets and Vowels In a string</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="StringCopy">
-            <label for="Programs">String Copy</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="Factorial">
-            <label for="Programs">Factorial</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="SumOfDigits">
-            <label for="Programs">Sum Of Digits</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="ReverseNumber">
-            <label for="Programs">Reverse Number</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="Palindrome">
-            <label for="Programs">Number Palindrome</label>
-        </div>
-        <div>
-            <input type="radio" id="Programs" name="P1" value="ArmstrongNumber">
-            <label for="Programs">Armstrong Number</label>
-        </div>
-        <br />
-        <input type="submit" name="Process" value="Process" />
+            <div>
 
-    </fieldset>
-</form>
+                <input type="radio" id="Programs" name="P1" value="StringReverse">
+                <label for="Programs">String Reverse</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="StringPalindrome">
+                <label for="Programs">String Palindrome</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="StringLength">
+                <label for="Programs">String Length without using Library Function</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="IndividualcharactersInString">
+                <label for="Programs">Seperate Individual characters from String</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="IndividualcharactersOfStringInReverseOrder">
+                <label for="Programs">Seperate Individual characters from String in Reverse Order</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="NumberOfWordsInString">
+                <label for="Programs">Number Of Words In String</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="CompareTwoStrings">
+                <label for="Programs">Compare Two Strings Without using Library Function</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="NumberOfAlaphabetsandVowels">
+                <label for="Programs">Count Number Of Alaphabets and Vowels In a string</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="StringCopy">
+                <label for="Programs">String Copy</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="Factorial">
+                <label for="Programs">Factorial</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="SumOfDigits">
+                <label for="Programs">Sum Of Digits</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="ReverseNumber">
+                <label for="Programs">Reverse Number</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="Palindrome">
+                <label for="Programs">Number Palindrome</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="ArmstrongNumber">
+                <label for="Programs">Armstrong Number</label>
+            </div>
+            <div>
+                <input type="radio" id="Programs" name="P1" value="SearchingElementInArray">
+                <label for="Programs">Searching Element In Array</label>
+            </div>
+            <br />
+            <input type="submit" name="Process" value="Process" />
+
+        </fieldset>
+    </form>
  
