--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Programs/Programs.cshtml
@@ -77,13 +77,14 @@
             <br />
             <input type="submit" name="Process" value="Process" />
 
-            <canvas id="Canvas" width="200" height="100"></canvas>
+            <canvas id="Canvas"></canvas>
 
            <script>
                var c = document.getElementById("Canvas");
                var ctx = c.getcontext("2d");
+               ctx.beginpa
                ctx.moveto(0, 0);
-               ctx.lineto(200, 100);
+               ctx.lineto(20, 10);
                ctx.stroke();
            </script>
 
