--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Views/Home/Index.cshtml
@@ -63,6 +63,7 @@
         <br />
         <input type="submit" value="Login" />
         @Html.ActionLink("Register", "Register", "Registration", null, new { style = "color:white" })
+        @Html.ActionLink("Email", "SendEmail", "SendEmail", null, new { style = "color:white" })
         <br />
         <br />
         <br />
